# deepcheese

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
agent/cheeseburger/: Cargo.toml  README.md  build.rs  config.toml
agent/cheeseburger/src/: error.rs  main.rs
agent/cheeseburger/src/client/: config.rs  mod.rs
agent/cheeseburger/src/core/: base_config.rs  duration.rs  mod.rs
agent/cheeseburger/src/core/account/: mod.rs
agent/cheeseburger/src/core/database/: config.rs  mod.rs
agent/cheeseburger/src/core/future/: contract.rs  future_type.rs  mod.rs  order.rs  stream.rs  trade_type.rs
agent/cheeseburger/src/core/indi/: mod.rs  query_code.rs
agent/cheeseburger/src/core/log/: mod.rs  (+1 more)
agent/cheeseburger/src/model/: cheon_more.rs  mod.rs  query_code.rs
lib/kis/: Cargo.toml
lib/kis/src/: auth.rs  config.rs  config.toml  kis.rs  kis_parse.rs  lib.rs  rate_limiter.rs
lib/kis/src/domestic/: inquire_interval_price.rs  inquire_recent_price.rs  inquire_stock_price.rs  mod.rs
lib/kis/src/overseas/: inquire_interval_stock_price.rs  inquire_interval_value.rs  inquire_stock_price.rs  mod.rs
lib/kis/tests/: test.rs
lib/server/: Cargo.toml  Dockerfile
lib/server/script/: run_server.sh
lib/server/src/: config.rs  database.rs  main.rs  update_asset_price.rs  update_category_history.rs  update_category_history_query.sql  update_currency_value.rs
lib/server/src/time_machine/: machine.rs  mod.rs  record_list.rs
research/deepcheese/: config.toml  pyproject.toml
research/deepcheese/deepcheese/data_loader/: __init__.py  kis_loader.py
research/deepcheese/deepcheese/dataset/: moving_window.py
research/deepcheese/deepcheese/model/: CNN.py
research/deepcheese/static_conf/: __init__.py  __main__.py  _build.py  _build_test.py  _config.py  _singleton.py
tool/: Dockerfile  pyproject.toml
tool/admin/: __init__.py  __main__.py  time_machine.py  update_asset_list.py  update_asset_price.py  update_category_history.py  update_category_history.sql  update_currency.py
tool/database_adapter/: __init__.py
tool/kis_developer/: __init__.py  access_token.py  auth.py  config.py  config.toml  domestic.py  domestic_future_option.py  kis.py  overseas.py
tool/time_machine/: __init__.py  __main__.py  machine.py
tool/time_machine/asset/: asset.py  balance.py  service.py
tool/time_machine/asset/tr_record/: tr_record.py  tr_record_list.py
tool/time_machine/banking/: __init__.py  balance.py  service.py
tool/time_machine/banking/tr_record/: tr_record.py  tr_record_list.py  tr_type.py
tool/time_machine/category/: category.py
tool/time_machine/chart/: history.py  service.py
tool/time_machine/chart/adapter/: __init__.py  database.py  kis.py  load_chart_history.sql
tool/time_machine/currency/: currency.py  currency_history.py  service.py
tool/time_machine/currency/adapter/: __init__.py  database.py  kis.py  load_currency_history.sql
(+198 files in other folders)
