[tool.poetry]
name = "tool"
version = "0.1.0"
description = ""
authors = ["Seungguen Cho <48639154+sgn-cho@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
