[package]
name = "cheeseburger"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
config = "0.14.0"
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.4"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
tonic-build = "0.11.0"
