[package]
name = "cheeseburger"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
config = "0.14.0"
chrono = { version = "0.4.38", features = ["serde"]}
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.4"
prost-types = "0.12.4"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
tonic-build = "0.11.0"
