[package]
name = "kis"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
config = { version = "0.14.0", features = ["toml"] }
chrono = { version = "0.4.37", features = ["serde"] }
log = "0.4.21"
