[tool.poetry]
name = "deepcheese"
version = "0.1.0"
description = ""
authors = ["Seungguen Cho <48639154+sgn-cho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
